--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^1.2.3",
     "@tanstack/react-query": "^5.32.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "@visx/axis": "^3.10.1",
+    "@visx/group": "^3.3.0",
+    "@visx/react-spring": "^3.10.1",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
@@ -21,8 +28,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-graph": "^1.1.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
