--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.7.5",
     "@shopify/react-native-skia": "^1.2.3",
     "@tanstack/react-query": "^5.32.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -34,8 +35,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.2.0",
-    "react-native-svg-charts": "^5.4.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
